metadata/sf-prod/force-app/main/default/objects/Automation_Settings__c/Automation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings used to control on and off of PBs, Flows, Triggers etc.</description>
    <label>Automation Settings</label>
</CustomObject>