metadata/sf-prod/force-app/main/default/objects/Automation_Settings__c/fields/Disable_All_Process_Builders__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Process_Builders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all process builders referencing this field in the entry point criteria.</description>
    <inlineHelpText>Disable all process builders referencing this field in the entry point criteria.</inlineHelpText>
    <label>Disable All Process Builders</label>
    <type>Checkbox</type>
</CustomField>