metadata/sf-prod/force-app/main/default/objects/Automation_Settings__c/fields/Disable_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all triggers referencing this field in the entry point criteria.</description>
    <inlineHelpText>Disable all triggers referencing this field in the entry point criteria.</inlineHelpText>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</CustomField>