metadata/sf-prod/force-app/main/default/objects/Automation_Settings__c/fields/Disable_SObject_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_SObject_Trigger__c</fullName>
    <description>Disable trigger per SObject. Input SObject API names and separate by semicolon (;). For Example: Account;Opportunity</description>
    <inlineHelpText>Disable trigger per SObject. Input SObject API names and separate by semicolon (;). For Example: Account;Opportunity</inlineHelpText>
    <label>Disable SObject Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>